2001-07-13  Sam Steingold  <sds@gnu.org>

	* stream.d (bitbuff_is_I): fixed the bin i/o for (signed-byte n)
	with n>32 on LITTLE_ENDIAN architecture

2001-07-12  Sam Steingold  <sds@gnu.org>

	abstracted some code
	* stream.d (bitbuff_iu_I, bitbuff_is_I): new functions
	(read-integer): use them
	(rd_by_iu_I): use bitbuff_iu_I()
	(rd_by_is_I): use bitbuff_is_I()
	(bitbuff_ixu_sub, bitbuff_ixs_sub): new functions
	(write-integer): use them
	(wr_by_ixu_sub): use bitbuff_ixu_sub()
	(wr_by_ixs_sub): use bitbuff_ixs_sub()

2001-07-11  Sam Steingold  <sds@gnu.org>

	YAPT (yet another pathname tweak)
	* pathname.d (lslashp): removed, replaced with slashp
	(looks_logical_p): new local function
	(parse-namestring): with *PARSE-NAMESTRING-ANSI* non-nil, parse as
	logical when pathname contains ";" - this is what others do
	(merge-pathnames): merge to logical even when only one is logical
	(make-pathname): coerce defaults to logical when the path is
	logical already

2001-07-10  Sam Steingold  <sds@gnu.org>

	* encoding.d, hashtabl.d, stream.d: unified some error messages

2001-07-10  Sam Steingold  <sds@gnu.org>

	finished the 2001-06-21 patch
	* lispbibl.d (make_file_stream): declare direction arg as direction_t
	* stream.d (make_unbuffered_stream, make_buffered_stream,
	make_file_stream): ditto
	* dirkey.d (open_reg_key): declare if_not_exists arg as
	if_does_not_exist_t

2001-07-10  Sam Steingold  <sds@gnu.org>

	* condition.lisp (appease-cerrors, muffle-cerrors): do not cons
	up a lambda for handler
	(exit-on-error, appease-cerrors, muffle-cerrors, batchmode-errors):
	turned comments into doc strings

2001-07-10  Sam Steingold  <sds@gnu.org>

	* eval.d (invoke_handlers): do not popSTACK twice!

2001-07-10  Sam Steingold  <sds@gnu.org>

	replaced chartcopy with memcpy
	compilation time of compile.lisp went down 3.76%
	fixed bug #438486
	* charstrg.d (chartcopy): removed
	* lispbibl.d (chartcopy): defined to expand to memcpy()

2001-07-09  Sam Steingold  <sds@gnu.org>
